# caredock

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: r0-ci.yml
apps/desktop/: README.md  index.html  package.json
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: Ui.tsx
apps/desktop/src/pages/: CatalogPage.tsx  DashboardPage.tsx  EldersPage.tsx  InstitutionPage.tsx  RelationshipsPage.tsx  SitesPage.tsx  StaffPage.tsx  SystemPage.tsx
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/desktop-commands/: Cargo.toml
crates/desktop-commands/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/examples/: r0_probe.rs
crates/storage/migrations/: 0001_schema_metadata_and_institution.sql  0002_attachments_and_audit.sql  0003_staff_and_organization.sql  0004_institution_sites_and_resources.sql  0005_staff_site_assignments.sql  0006_service_catalog_pricing_and_packages.sql  0007_elders_relationships_and_snapshots.sql
crates/storage/src/: backup.rs  capability_probe.rs  database.rs  lib.rs  migration.rs
crates/storage/tests/: formal_migrations.rs
crates/storage/tests/snapshots/: m0_m1_schema.snapshot  m0_m2_schema.snapshot  m0_m3_schema.snapshot  m0_m4_schema.snapshot
