[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/application",
  "crates/desktop-commands",
  "crates/domain",
  "crates/storage",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
thiserror = "2"
