[package]
name = "anyangtai-storage"
version.workspace = true
edition.workspace = true

[dependencies]
anyangtai-application = { path = "../application" }
anyangtai-domain = { path = "../domain" }
rusqlite = { version = "0.37", features = ["backup", "bundled"] }
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
